# c-dns_demo

./: CMakeLists.txt  dns_demo.c  dns_demo.sublime-project  notes.txt  resolve_ipv4.c  resolver.c  structs_ipv4.c
doc/: how_to.txt  naptr.md  notes.txt
traces/: getaddrinfo_google.pcapng  onsip_registration_filtered.pcapng  onsip_registration_full.pcapng  res_query_a_google.pcapng  res_query_naptr_google.pcapng  res_query_ns_google.pcapng  sip.onsip.com_sip_reg.pcapng
